--- a/index.html
+++ b/index.html
@@ -10,36 +10,36 @@
   <body>
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-      <h1>I'm Devin.</h1>
-      <p>a <span class = "pro">pro</span>grammer and student at UCLA.</p>
+      <h1><em>I'm Devin.</em></h1>
+      <h2 class="a-programmer">a <span class = "pro">pro</span>grammer and student at UCLA.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="cloud-img">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="headshot" src="images/circle-cropped.png" alt="profile-pic">
+        <img class="headshot-img" src="images/circle-cropped.png" alt="profile-pic">
         <h2>Hello.</h2>
-        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p class="intro-p">I plan to use this website to showcase my passions and projects. I am a Web Developer. I hope you enjoy browsing through!</p>
       </div>
-      <hr>
+      <hr >
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2>My Passions.</h2>
         <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Lorem & Ipsum</h3>
+          <img class="rover-img" src="images/rover_circle.png" alt="">
+          <h3>Computer Science</h3>
           <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
         </div>
         <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <img class="nature-img" src="images/ocean-circle.png" alt="nature">
+          <h3>The Outdoors</h3>
+          <p>I have an intense passion for nature. I love surfing, hiking, and camping, and hope to work in a field that safeguards our great outdoors.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Let me know if you have any questions.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <p class="contact-message">I'd love to hear any feedback or requests you have.</p>
         <a class="btn" href="mailto:devinyerasi@yahoo.com">CONTACT ME</a>
       </div>
     </div>
@@ -49,7 +49,7 @@
       <a class="footer-link" href="https://www.linkedin.com/in/dyerasi" target="_blank">LinkedIn</a>
       <a class="footer-link" href="https://github.com/dyerasi/" target="_blank">Github</a>
       <a class="footer-link" href="https://dyerasi.github.io/personal-website/" target="_blank">Website</a>
-      <p>© 2020 Devin Yerasi.</p>
+      <p class="copyright">© 2020 Devin Yerasi.</p>
     </div>
 
 
